# OpenRobotica

./: .gitmodules  CMakeLists.txt  Makefile  README.md  System Architecture.drawio  main.c
app/: CMakeLists.txt  main.c
include/: main.h  movements.h
setup/: calibration.ino  drop_boxes.ino  first_box.ino  includes.ino  interrupts.ino  main.ino  movements.ino  paths.ino  pause.ino  pick_boxes.ino  setup.ino
src/: CMakeLists.txt  magnet_interrupts.c  movements.c
src/movements/: CMakeLists.txt  movements.c  movements.h
